--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -54,7 +54,7 @@
     width: 15vw;
     display: flex;
     align-items: center;
-    // justify-content: space-between;
+    justify-content: space-between;
 
     &__notify {
       flex: 0.25;
