--- a/src/style/style.css
+++ b/src/style/style.css
@@ -79,6 +79,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header__user__notify {
