--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -8,46 +8,53 @@
 
   h1 {
     span:nth-child(2) {
-      color: $accent-red-text;
       color: $logo-red;
       font-weight: 600;
     }
   }
 
-  &__logo {
-    flex: 0.05;
-    color: $dark-text;
+  &__main {
     display: flex;
-    img {
-      width: 25px;
-      height: 15px;
-    }
-  }
-  &__search {
-    flex: 0.6;
-    display: flex;
+    flex: 0.99;
+    justify-content: space-between;
 
-    &__in {
-      border-radius: 5px;
-      border: 0.5px solid #4b4b4b8e;
-      padding: 0.25em;
-      background-color: #15122b;
+    &__logo {
+      flex: 0.05;
+      color: $dark-text;
       display: flex;
-      transition: all ease-in-out 0.35s;
-      width: 50%;
-      &__icon {
-        display: flex;
-        align-items: center;
+      img {
+        width: 25px;
+        height: 15px;
       }
     }
-    input {
-      margin-left: 0.25em;
-      padding: 0.25em;
-      background-color: transparent;
-      width: 100%;
-      outline: none;
+    &__search {
+      flex: 0.6;
+      display: flex;
 
-      color: $dark-text;
+      &__in {
+        border-radius: 5px;
+
+        // border: 0.5px solid $logo-red;
+        border: 1px solid transparent;
+        padding: 0.25em;
+        background-color: $dark-card;
+        display: flex;
+        transition: all ease-in-out 0.35s;
+        width: 50%;
+        &__icon {
+          display: flex;
+          align-items: center;
+        }
+      }
+      input {
+        margin-left: 0.25em;
+        padding: 0.25em;
+        background-color: transparent;
+        width: 100%;
+        outline: none;
+
+        color: $dark-text;
+      }
     }
   }
   &__user {
@@ -70,20 +77,22 @@
       h3 {
         margin-left: 0.5em;
         font-weight: 400;
-        font-size: 0.95rem;
-        letter-spacing: 0.5px;
+        font-size: 0.85rem;
+        letter-spacing: 0.25px;
       }
     }
 
     img {
       width: 35px;
       height: 35px;
-      border-radius: 50%;
+      border-radius: 40%;
     }
   }
 }
 .expand {
   width: 100%;
   border: 0;
-  background-color: #0d0b20;
+  border: 1px solid $logo-red;
+  background-color: $dark-card;
+  transform: scale(1.05);
 }
