--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,5 +1,7 @@
-$dark-bg: #171430;
-$dark-card: #26233c;
+// $dark-bg: #171430;
+$dark-bg: #0d1117;
+// $dark-card: #26233c;
+$dark-card: #161b22;
 $dark-text: #dbdbdb;
 $dark-text-grey: #6c6c7c;
 $accent-red-bg: #4d1229;
@@ -7,3 +9,8 @@ $accent-red-text: #fe0738;
 $accent-green-bg: #1a382d;
 $accent-green-text: #259441;
 $logo-red: #f52f57;
+// $logo-red: #0070f3;
+$accent-blue-bg: #12284c;
+$accent-blue-text: #007bfe;
+$anim: all ease-in-out 0.3s;
+$font-family: "Inter", sans-serif;
