--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,7 +1,8 @@
 @import "./../components/_header.scss";
 @import "./_variables.scss";
-
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import "./../components/login";
+@import "./../components/selectcurrency";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   border: 0;
   margin: 0;
@@ -9,7 +10,7 @@
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Inter", sans-serif;
   background-color: $dark-bg;
   color: $dark-text;
 }
