--- a/src/components/_selectcurrency.scss
+++ b/src/components/_selectcurrency.scss
@@ -70,7 +70,7 @@
         overflow-y: scroll;
         margin-top: 1.5em;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         gap: 1em;
         &::-webkit-scrollbar {
           display: none;
@@ -86,10 +86,13 @@
         background-color: $dark-bg;
         transition: $anim;
 
+        p {
+          color: $dark-text-grey;
+        }
         &:hover {
           transform: scale(1.05);
 
-          background-color: #f52f57bd;
+          // background-color: #f52f57bd;
         }
       }
     }
