--- a/src/components/_selectcurrency.scss
+++ b/src/components/_selectcurrency.scss
@@ -27,6 +27,12 @@
     width: 40%;
     transition: $anim;
 
+    @media screen and (max-width: 768px) {
+      & {
+        width: 100%;
+      }
+    }
+
     &:hover {
       transform: scale(0.95);
     }
@@ -44,12 +50,13 @@
       padding: 1em;
       background-color: $dark-card;
       margin-top: 0.5em;
-      width: 50%;
-      height: 50%;
+      width: 60%;
+      height: 60%;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+
       right: 0;
 
       &__close {
@@ -70,6 +77,7 @@
         overflow-y: scroll;
         margin-top: 1.5em;
         display: grid;
+
         grid-template-columns: 1fr 1fr 1fr;
         gap: 1em;
         &::-webkit-scrollbar {
@@ -77,6 +85,9 @@
         }
       }
       li {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border-radius: 5px;
         text-transform: uppercase;
         padding: 0.5em;
@@ -93,6 +104,28 @@
           transform: scale(1.05);
 
           // background-color: #f52f57bd;
+        }
+      }
+
+      @media screen and (max-width: 750px) {
+        width: 80%;
+        height: 70%;
+
+        li {
+          flex-direction: column;
+        }
+
+        &__list {
+          grid-template-columns: 1fr 1fr;
+        }
+      }
+
+      @media screen and (max-width: 530px) {
+        &__list {
+          grid-template-columns: 1fr;
+        }
+        li {
+          flex-direction: row;
         }
       }
     }
