--- a/src/components/_selectcurrency.scss
+++ b/src/components/_selectcurrency.scss
@@ -50,7 +50,7 @@
       padding: 1em;
       background-color: $dark-card;
       margin-top: 0.5em;
-      width: 60%;
+      width: 80%;
       height: 60%;
       position: absolute;
       top: 50%;
@@ -108,8 +108,9 @@
       }
 
       @media screen and (max-width: 750px) {
-        width: 80%;
-        height: 70%;
+        width: 90%;
+        height: 80%;
+        margin-top: 1.5em;
 
         li {
           flex-direction: column;
