fix[header]: logo cleanup

--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -101,6 +101,9 @@
       border-radius: 40%;
     }
   }
+  @media screen and (max-width: 550px) {
+    padding: 0.5em;
+  }
 }
 .expand {
   width: 100%;
