--- a/src/style/style.css
+++ b/src/style/style.css
@@ -96,6 +96,12 @@
   border-radius: 40%;
 }
 
+@media screen and (max-width: 550px) {
+  .header {
+    padding: 0.5em;
+  }
+}
+
 .expand {
   width: 100%;
   border: 0;
