--- a/src/components/_selectcurrency.scss
+++ b/src/components/_selectcurrency.scss
@@ -1,4 +1,5 @@
 .selectcurrency {
+  z-index: 2;
   width: 20%;
   display: flex;
   justify-content: flex-end;
@@ -32,7 +33,11 @@
         width: 100%;
       }
     }
-
+    @media screen and (max-width: 550px) {
+      & {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      }
+    }
     &:hover {
       transform: scale(0.95);
     }
@@ -42,6 +47,16 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      input {
+        // text-transform: uppercase;
+        padding: 0.5em;
+        width: 50%;
+        background-color: $dark-bg;
+        border-radius: 5px;
+        font-size: 1em;
+        outline: none;
+        color: $dark-text;
+      }
     }
     &__dropdown {
       display: flex;
@@ -50,7 +65,7 @@
       padding: 1em;
       background-color: $dark-card;
       margin-top: 0.5em;
-      width: 80%;
+      width: 70%;
       height: 60%;
       position: absolute;
       top: 50%;
@@ -61,7 +76,6 @@
 
       &__close {
         border-radius: 50%;
-
         display: flex;
         align-items: center;
         transition: $anim;
@@ -77,15 +91,15 @@
         overflow-y: scroll;
         margin-top: 1.5em;
         display: grid;
-
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 1em;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 1.5em;
         &::-webkit-scrollbar {
           display: none;
         }
       }
       li {
         display: flex;
+        flex-basis: auto;
         flex-direction: column;
         justify-content: space-between;
         border-radius: 5px;
@@ -94,36 +108,42 @@
         cursor: pointer;
         list-style: none;
         font-weight: 600;
+        // width: 5em;
         background-color: $dark-bg;
         transition: $anim;
 
         p {
-          color: $dark-text-grey;
+          color: $accent-green-text;
+          font-weight: 800;
+          letter-spacing: 0.25px;
+          font-size: 0.75rem;
+          // text-transform: lowercase;
         }
         &:hover {
           transform: scale(1.05);
-
-          // background-color: #f52f57bd;
         }
       }
 
       @media screen and (max-width: 750px) {
         width: 90%;
         height: 80%;
-        margin-top: 1.5em;
 
         li {
           flex-direction: column;
         }
 
         &__list {
-          grid-template-columns: 1fr 1fr;
+          grid-template-columns: repeat(4, 1fr);
         }
       }
 
       @media screen and (max-width: 530px) {
+        // margin-top: 2em;
+        padding-top: 2em;
+        height: 100%;
+
         &__list {
-          grid-template-columns: 1fr;
+          grid-template-columns: 1fr 1fr 1fr;
         }
         li {
           flex-direction: row;
