--- a/src/style/style.css
+++ b/src/style/style.css
@@ -21,12 +21,10 @@
   margin-right: 3em;
   flex: 0.1;
   color: #dbdbdb;
-  display: flex;
 }
 
 .header__main__logo img {
-  width: 25px;
-  height: 15px;
+  width: 150px;
 }
 
 .header__main__search {
@@ -149,6 +147,7 @@
 }
 
 .selectcurrency {
+  z-index: 2;
   width: 20%;
   display: flex;
   justify-content: flex-end;
@@ -187,6 +186,12 @@
   }
 }
 
+@media screen and (max-width: 550px) {
+  .selectcurrency__currency {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
+}
+
 .selectcurrency__currency:hover {
   transform: scale(0.95);
 }
@@ -198,6 +203,16 @@
   align-items: center;
 }
 
+.selectcurrency__currency__top input {
+  padding: 0.5em;
+  width: 50%;
+  background-color: #0d1117;
+  border-radius: 5px;
+  font-size: 1em;
+  outline: none;
+  color: #dbdbdb;
+}
+
 .selectcurrency__currency__dropdown {
   display: flex;
   flex-direction: column;
@@ -205,7 +220,7 @@
   padding: 1em;
   background-color: #161b22;
   margin-top: 0.5em;
-  width: 80%;
+  width: 70%;
   height: 60%;
   position: absolute;
   top: 50%;
@@ -232,8 +247,8 @@
   overflow-y: scroll;
   margin-top: 1.5em;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 1em;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 1.5em;
 }
 
 .selectcurrency__currency__dropdown__list::-webkit-scrollbar {
@@ -242,6 +257,7 @@
 
 .selectcurrency__currency__dropdown li {
   display: flex;
+  flex-basis: auto;
   flex-direction: column;
   justify-content: space-between;
   border-radius: 5px;
@@ -255,7 +271,10 @@
 }
 
 .selectcurrency__currency__dropdown li p {
-  color: #6c6c7c;
+  color: #259441;
+  font-weight: 800;
+  letter-spacing: 0.25px;
+  font-size: 0.75rem;
 }
 
 .selectcurrency__currency__dropdown li:hover {
@@ -266,19 +285,22 @@
   .selectcurrency__currency__dropdown {
     width: 90%;
     height: 80%;
-    margin-top: 1.5em;
   }
   .selectcurrency__currency__dropdown li {
     flex-direction: column;
   }
   .selectcurrency__currency__dropdown__list {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media screen and (max-width: 530px) {
+  .selectcurrency__currency__dropdown {
+    padding-top: 2em;
+    height: 100%;
+  }
   .selectcurrency__currency__dropdown__list {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
   .selectcurrency__currency__dropdown li {
     flex-direction: row;
