--- a/src/components/_selectcurrency.scss
+++ b/src/components/_selectcurrency.scss
@@ -1,5 +1,4 @@
 .selectcurrency {
-  z-index: 2;
   width: 20%;
   display: flex;
   justify-content: flex-end;
@@ -59,6 +58,7 @@
       }
     }
     &__dropdown {
+      z-index: 1000;
       display: flex;
       flex-direction: column;
       border-radius: 5px;
@@ -152,19 +152,14 @@
     }
   }
 
-  select {
-    -webkit-appearance: none;
-    width: 50%;
-    border-radius: 5px;
-    background: white;
-    cursor: pointer;
-    transition: all 150ms ease;
-    option {
-      padding: 0.25em;
-      color: red;
-    }
-  }
-  select::-webkit-scrollbar {
-    display: none;
+  &__wrapper {
+    z-index: 1000;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: #0d1117e5;
   }
 }
