--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -2,15 +2,18 @@
 $dark-bg: #0d1117;
 // $dark-card: #26233c;
 $dark-card: #161b22;
-$dark-text: #dbdbdb;
+$dark-text-white: #cfd6e4;
+$dark-text: #b3d9ff;
 $dark-text-grey: #6c6c7c;
 $accent-red-bg: #4d1229;
-$accent-red-text: #fe0738;
+$accent-red-text: #ea3943;
 $accent-green-bg: #1a382d;
-$accent-green-text: #259441;
-$logo-red: #f52f57;
-// $logo-red: #0070f3;
+$accent-green-text: #16c784;
+// $logo-blue: #f52f57;
+$logo-blue: #2a95ff;
 $accent-blue-bg: #12284c;
 $accent-blue-text: #007bfe;
 $anim: all ease-in-out 0.3s;
 $font-family: "Inter", sans-serif;
+$logo-font: "Montserrat", sans-serif;
+$link-color: #f84569;
