--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -1,14 +1,16 @@
 @import "../style/variables";
 
 .header {
-  padding: 0.5em 1.5em;
+  padding: 0.5em 1em;
   display: flex;
   justify-content: space-between;
   font-size: 0.9rem;
+  overflow: hidden;
+  border-bottom: 1px solid $dark-card;
 
   h1 {
     span:nth-child(2) {
-      color: $logo-red;
+      color: $logo-blue;
       font-weight: 600;
     }
   }
@@ -21,27 +23,38 @@
     &__logo {
       margin-right: 3em;
       flex: 0.1;
-      color: $dark-text;
-      // display: flex;
-      img {
-        width: 150px;
-        // height: 100%;
+
+      h2 {
+        font-family: $logo-font;
+        color: $dark-text;
+        font-weight: 500;
+        font-size: 1.5rem;
       }
+      span {
+        margin-left: 0.05em;
+        color: $logo-blue;
+      }
+      // display: flex;
     }
     &__search {
       flex: 0.8;
       display: flex;
 
+      // position: absolute;
+      // left: 50%;
+      // transform: translateX(-50%);
+      // display: none;
+
       &__in {
         border-radius: 5px;
 
-        // border: 0.5px solid $logo-red;
+        // border: 0.5px solid $logo-blue;
         border: 1px solid transparent;
         padding: 0.25em;
         background-color: $dark-card;
         display: flex;
         transition: all ease-in-out 0.35s;
-        width: 60%;
+        width: 100%;
         &__icon {
           display: flex;
           align-items: center;
@@ -104,11 +117,29 @@
   @media screen and (max-width: 550px) {
     padding: 0.5em;
   }
+
+  &__sidebar {
+    right: 0;
+    position: absolute;
+    height: 100%;
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    transition: $anim;
+
+    img {
+      width: 10%;
+    }
+  }
 }
 .expand {
   width: 100%;
   border: 0;
-  border: 1px solid $logo-red;
+  border: 1px solid $logo-blue;
   background-color: $dark-card;
   transform: scale(1.05);
+}
+
+.hidden {
+  right: -100px;
 }
