--- a/src/components/_loading.scss
+++ b/src/components/_loading.scss
@@ -2,18 +2,28 @@
   //   width: 100vw;
   //   height: 100vh;
   position: absolute;
-  top: 40%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  top: 20%;
   left: 50%;
-  transform: translate(-50%, -40%);
+  transform: translateX(-50%);
   img {
-    width: 250px;
+    width: 150px;
   }
   h4 {
-    color: $dark-text-grey;
+    margin-top: 0.25em;
+    margin-bottom: 0.25em;
+    font-size: 2rem;
+    color: #b3d9ff;
+    font-family: $logo-font;
     text-align: center;
-    font-weight: 700;
-    letter-spacing: 1px;
-    margin-right: 1em;
+    font-weight: 500;
+    letter-spacing: 1.5px;
+    span {
+      font-weight: 500;
+      color: $logo-blue;
+    }
   }
 
   &__loader {
