--- a/src/components/_selectcurrency.scss
+++ b/src/components/_selectcurrency.scss
@@ -1,7 +1,6 @@
 .selectcurrency {
-  width: 20%;
   display: flex;
-  justify-content: flex-end;
+  margin-right: 0.5em;
   &__selector {
     margin-right: 1em;
     padding: 0.5em;
@@ -13,6 +12,8 @@
   }
 
   &__currency {
+    border: 2 px solid $dark-card;
+    padding: 0.5em;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -24,7 +25,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: 800;
-    width: 40%;
+    width: 100%;
     transition: $anim;
 
     @media screen and (max-width: 768px) {
@@ -114,6 +115,7 @@
 
         p {
           color: $accent-green-text;
+          color: $dark-text-grey;
           font-weight: 800;
           letter-spacing: 0.25px;
           font-size: 0.75rem;
@@ -154,12 +156,13 @@
 
   &__wrapper {
     z-index: 1000;
-    position: absolute;
+    position: fixed;
+    //https://api-docs.coinfeeds.io/
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
+    width: 101%;
+    height: 101%;
     background-color: #0d1117e5;
   }
 }
