--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,11 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
 @import "./../components/_header.scss";
 @import "./_variables.scss";
 @import "./../components/login";
 @import "./../components/selectcurrency";
-@import "./../components/newscard";
+@import "./../components/newslist";
 @import "./../components/landing";
 @import "./../components/loading";
+@import "./../components/globaldata";
+@import "./../components/sidebar";
+@import "./../components/table";
 * {
   border: 0;
   margin: 0;
