feat: trending news add

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -674,4 +674,8 @@ body {
   background-color: #0d1117;
   color: #b3d9ff;
 }
+
+.CryptoPanicWidget::-webkit-scrollbar {
+  display: none;
+}
 /*# sourceMappingURL=style.css.map */
